# pytest-alembic

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  readthedocs.yml  setup.cfg
.circleci/: config.yml
.github/workflows/: build.yml  release.yml
docs/: CHANGELOG.md  Makefile  requirements.txt
docs/source/: api.rst  asyncio.rst  conf.py  contributing.rst  custom_data.rst  custom_tests.rst  experimental_tests.rst  fixtures.rst  index.rst  quickstart.rst  running.rst  setup.rst
examples/test_ambiguous_downgrade_history/: models.py
examples/test_ambiguous_downgrade_history/migrations/versions/: 10483a8dd3c8.py  25521e40a00f.py  79ee02b5e895.py  7f5b06f81aef.py  845c0ab60c02.py  b55e304ba00c.py  base.py  bd7be2a11e1c.py  effc355fddff.py
examples/test_async_anyio/: conftest.py  models.py
examples/test_async_anyio/migrations/: env.py
examples/test_async_sqlalchemy/: conftest.py  setup.cfg
examples/test_async_sqlalchemy/migrations/: env.py
examples/test_async_sqlalchemy/migrations/versions/: bbbbbbbbbbbb_update_foo.py
examples/test_async_sqlalchemy_native/: conftest.py  setup.cfg
examples/test_async_sqlalchemy_native/migrations/: env.py
examples/test_async_sqlalchemy_native/migrations/versions/: bbbbbbbbbbbb_update_foo.py
examples/test_basic_revision_upgrade_data/: conftest.py
examples/test_basic_revision_upgrade_data/migrations/versions/: bbbbbbbbbbbb_update_foo.py
examples/test_branched_history/: models.py  setup.cfg  test_migrations.py
examples/test_branched_history/migrations/versions/: bbbbbbbbbbbb_update_foo.py  cccccccccccc_create_bar.py
examples/test_branched_history_before_upgrade_data/: alembic.ini  conftest.py  models.py
examples/test_branched_history_before_upgrade_data/migrations/: env.py
examples/test_branched_history_with_mergepoint/: test_migrations.py
examples/test_branched_history_with_mergepoint/migrations/versions/: 70da13da0332_.py  aaaaaaaaaaaa_create_foo.py  bbbbbbbbbbbb_update_foo.py  cccccccccccc_create_bar.py
examples/test_complex_revision_upgrade_data/: conftest.py  models.py
examples/test_complex_revision_upgrade_data/migrations/versions/: aaaaaaaaaaaa_create_foo.py  bbbbbbbbbbbb_update_foo.py  cccccccccccc_update_foo.py
examples/test_consistency_doesnt_roundtrip/migrations/: env.py
examples/test_consistency_doesnt_roundtrip/migrations/versions/: aaaaaaaaaaaa_create_foo.py
examples/test_default_script_location/: alembic.ini
examples/test_downgrade_leaves_no_trace_failure/: models.py  setup.cfg
examples/test_downgrade_leaves_no_trace_failure/migrations/versions/: aaaaaaaaaaaa_create_foo.py  bbbbbbbbbbbb_create_foo.py
examples/test_downgrade_leaves_no_trace_success/: models.py  setup.cfg
examples/test_downgrade_leaves_no_trace_success/migrations/versions/: aaaaaaaaaaaa_create_foo.py
examples/test_empty_history/: models.py  setup.cfg
examples/test_experimental_all_models_register_async/: alembic.ini  conftest.py  setup.cfg
examples/test_experimental_all_models_register_async/migrations/: env.py
examples/test_experimental_all_models_register_async/migrations/versions/: aaaaaaaaaaaa_create_foo.py
examples/test_experimental_all_models_register_automatic/: pyproject.toml
examples/test_experimental_all_models_register_failure/: conftest.py
examples/test_experimental_all_models_register_failure/models/: bar.py
examples/test_experimental_all_models_register_metadata/: models.py
examples/test_experimental_all_models_register_metadata/migrations/: env.py
examples/test_experimental_all_models_register_namespace_package/migrations/: env.py
examples/test_experimental_all_models_register_no_metadata/: models.py
examples/test_experimental_all_models_register_no_metadata/migrations/: env.py
examples/test_experimental_all_models_register_offline/: conftest.py
examples/test_experimental_all_models_register_offline/migrations/: env.py
examples/test_failing_downgrade/: models.py
examples/test_failing_downgrade/migrations/versions/: bbbbbbbbbbbb_create_foo.py  cccccccccccc_create_foo.py
examples/test_generate_revision/: alembic.ini  models.py  setup.cfg  test_migration.py
examples/test_manual_alembic_config/: conftest.py  models.py
examples/test_migrate_down_before/: test_migrations.py
examples/test_migrate_down_to_base/: conftest.py  test_migrations.py
examples/test_migrate_down_to_base/migrations/versions/: aaaaaaaaaaaa_create_foo.py
examples/test_migrate_up_before/: test_migrations.py
examples/test_migrate_up_to/: test_migrations.py
examples/test_migrate_up_to/migrations/versions/: bbbbbbbbbbbb_update_foo.py
examples/test_minimum_downgrade_revision/: conftest.py  models.py
examples/test_minimum_downgrade_revision/migrations/versions/: aaaaaaaaaaaa_create_foo.py  bbbbbbbbbbbb_create_foo.py  (+1 more)
examples/test_multiple_schemata/: alembic2.ini  conftest.py
examples/test_multiple_schemata/migrations/: env.py
examples/test_multiple_schemata/migrations2/: env.py
examples/test_process_revision_directives/: conftest.py
examples/test_pytest_alembic_tests_path/: pytest.ini
examples/test_pytest_alembic_tests_path/tests_/: conftest.py
examples/test_schema_revision_data/: conftest.py  models.py  setup.cfg
examples/test_skip_revision/: conftest.py
examples/test_unimplemented_downgrade_warning/: conftest.py  setup.cfg
examples/test_unimplemented_downgrade_warning/migrations/: env.py
examples/test_version_table_schema/: conftest.py
examples/test_version_table_schema/migrations/: env.py
src/pytest_alembic/: __init__.py  config.py  executor.py  history.py  revision_data.py  runner.py  tests.py  upgrade_data.py
src/pytest_alembic/plugin/: __init__.py  error.py  fixtures.py  hooks.py  plugin.py
src/pytest_alembic/tests/: __init__.py  default.py
tests/: __init__.py  conftest.py  test_anyio.py  test_config.py  test_executor.py  test_history.py  test_revision_data.py  test_runner.py
tests/plugin/: test_plugin.py
tests/tests/experimental/: test_all_models_register_on_metadata.py  test_collect_clean_alembic_environment.py
(+12 files in other folders)
